--- a/oma-organics/index.html
+++ b/oma-organics/index.html
@@ -2050,7 +2050,7 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
     <div class="container">
       <div class="founder-layout">
         <div class="founder-img-area">
-          <div class="founder-placeholder"><div class="fn">Ijeoma</div><div class="ft">Founder</div></div>
+          <img src="images/Ijeoma_Onu_2.webp" alt="Ijeoma Onu, Founder" style="width:100%;border-radius:8px;">
           <div class="founder-accent"></div>
         </div>
         <div class="founder-copy">
@@ -2132,11 +2132,11 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
         <span style="font-size:0.72rem;color:var(--clay);font-weight:200;">5 products</span>
       </div>
       <div class="p-row p-row-3">
-        <div class="pc" data-cat="body" onclick="openPD('bo-as')"><div class="pc-img"><img src="images/Body_Oil_-_Uto.png" alt="AMALFI SUNRISE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">AMALFI SUNRISE</div><div class="pc-sub">Citrus, fig leaf, warm stone</div><div class="pc-price"><span class="from">From </span>$20</div></div>
-        <div class="pc" data-cat="body" onclick="openPD('bo-ig')"><div class="pc-img"><div class="pc-ph">Imperial Garden</div><div class="pc-qv">Quick View</div></div><div class="pc-name">IMPERIAL GARDEN</div><div class="pc-sub">Dark orchid, plum, velvet moss</div><div class="pc-price"><span class="from">From </span>$20</div></div>
+        <div class="pc" data-cat="body" onclick="openPD('bo-as')"><div class="pc-img"><img src="images/Body_Oil_-_Almafi_Sunrise.webp" alt="AMALFI SUNRISE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">AMALFI SUNRISE</div><div class="pc-sub">Citrus, fig leaf, warm stone</div><div class="pc-price"><span class="from">From </span>$20</div></div>
+        <div class="pc" data-cat="body" onclick="openPD('bo-ig')"><div class="pc-img"><img src="images/Body_Oil_-_Imperial_Garden.png" alt="IMPERIAL GARDEN" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">IMPERIAL GARDEN</div><div class="pc-sub">Dark orchid, plum, velvet moss</div><div class="pc-price"><span class="from">From </span>$20</div></div>
         <div class="pc" data-cat="body" onclick="openPD('bo-mod')"><div class="pc-img"><img src="images/Modman_Body_Oil.png" alt="MOD" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">MOD</div><div class="pc-sub">Clean, deliberate, weightless</div><div class="pc-price"><span class="from">From </span>$20</div></div>
         <div class="pc" data-cat="body" onclick="openPD('bo-uto')"><div class="pc-img"><img src="images/Body_Oil_-_Uto.png" alt="UTÒ" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">UTÒ</div><div class="pc-sub">Warm resin body oil</div><div class="pc-price"><span class="from">From </span>$20</div></div>
-        <div class="pc" data-cat="body" onclick="openPD('sahel')"><div class="pc-img"><div class="pc-ph">Sahel</div><div class="pc-badge">Restocking</div><div class="pc-qv">Quick View</div></div><div class="pc-name">SAHEL</div><div class="pc-sub">Softly sweet, warm, comforting — Utò scented body crème</div><div class="pc-price"><span class="from">From </span>$34</div></div>
+        <div class="pc" data-cat="body" onclick="openPD('sahel')"><div class="pc-img"><img src="images/Body_Creme_-_Sahel.webp" alt="SAHEL" loading="lazy"><div class="pc-badge">Restocking</div><div class="pc-qv">Quick View</div></div><div class="pc-name">SAHEL</div><div class="pc-sub">Softly sweet, warm, comforting — Utò scented body crème</div><div class="pc-price"><span class="from">From </span>$34</div></div>
       </div>
     </div>
 
@@ -2147,7 +2147,7 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
       </div>
       <div class="p-row p-row-2">
         <div class="pc" data-cat="face" onclick="openPD('fo-resolve')"><div class="pc-img"><img src="images/Resolve_Face_Oil.png" alt="RESOLVE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">RESOLVE</div><div class="pc-sub">Blemish correcting — tea tree, CBD, squalane</div><div class="pc-price"><span class="from">From </span>$32</div></div>
-        <div class="pc" data-cat="face" onclick="openPD('fo-grace')"><div class="pc-img"><div class="pc-ph">Grace</div><div class="pc-qv">Quick View</div></div><div class="pc-name">GRACE</div><div class="pc-sub">Anti-aging — prickly pear, frankincense, marula</div><div class="pc-price"><span class="from">From </span>$32</div></div>
+        <div class="pc" data-cat="face" onclick="openPD('fo-grace')"><div class="pc-img"><img src="images/Face_oil_-_grace.jpg" alt="GRACE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">GRACE</div><div class="pc-sub">Anti-aging — prickly pear, frankincense, marula</div><div class="pc-price"><span class="from">From </span>$32</div></div>
       </div>
     </div>
 
@@ -2566,7 +2566,7 @@ const P = [
    ingredients:['Cane Sugar Alcohol','Yuzu','Pomelo','Bergamot','Litsea Cubeba','Basil','Mandarin','Linden Blossom Absolute','Mimosa Absolute','Narcissus Absolute','Jasmine Absolute','Tiare Flower Extract','Sandalwood','Vanilla Absolute','Jasmine'],
    sizes:[{s:'10ml',p:32},{s:'50ml',p:72}],pairs:['p-uto','bo-as'],badge:null},
   // BODY OILS (4)
-  {id:'bo-as',name:'AMALFI SUNRISE',collection:'Good Body',cat:'body',sub:'Botanical body oil — citrus, fig leaf, warm stone',img:'images/Body_Oil_-_Uto.png',
+  {id:'bo-as',name:'AMALFI SUNRISE',collection:'Good Body',cat:'body',sub:'Botanical body oil — citrus, fig leaf, warm stone',img:'images/Body_Oil_-_Almafi_Sunrise.webp',
    why:'Amalfi Sunrise wears like a Mediterranean morning — bright citrus and fig leaf settling into sun-warmed skin. A body oil that absorbs fully, leaving your skin soft and lightly scented all day.',
    who:'For anyone who wants their body care to feel like a moment, not a chore. Bright, warm, energizing — this sets the tone.',
    use:'Warm a few pumps between palms. Massage into damp skin after showering for best absorption.',
