Add cache-busting params to images that aren't loading

--- a/oma-organics/index.html
+++ b/oma-organics/index.html
@@ -2050,7 +2050,7 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
     <div class="container">
       <div class="founder-layout">
         <div class="founder-img-area">
-          <img src="images/Ijeoma_Onu_2.webp" alt="Ijeoma Onu, Founder" style="width:100%;border-radius:8px;">
+          <img src="images/Ijeoma_Onu_2.webp?v=2" alt="Ijeoma Onu, Founder" style="width:100%;border-radius:8px;">
           <div class="founder-accent"></div>
         </div>
         <div class="founder-copy">
@@ -2133,10 +2133,10 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
       </div>
       <div class="p-row p-row-3">
         <div class="pc" data-cat="body" onclick="openPD('bo-as')"><div class="pc-img"><img src="images/Body_Oil_-_Almafi_Sunrise.webp" alt="AMALFI SUNRISE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">AMALFI SUNRISE</div><div class="pc-sub">Citrus, fig leaf, warm stone</div><div class="pc-price"><span class="from">From </span>$20</div></div>
-        <div class="pc" data-cat="body" onclick="openPD('bo-ig')"><div class="pc-img"><img src="images/Body_Oil_-_Imperial_Garden.png" alt="IMPERIAL GARDEN" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">IMPERIAL GARDEN</div><div class="pc-sub">Dark orchid, plum, velvet moss</div><div class="pc-price"><span class="from">From </span>$20</div></div>
+        <div class="pc" data-cat="body" onclick="openPD('bo-ig')"><div class="pc-img"><img src="images/Body_Oil_-_Imperial_Garden.png?v=2" alt="IMPERIAL GARDEN" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">IMPERIAL GARDEN</div><div class="pc-sub">Dark orchid, plum, velvet moss</div><div class="pc-price"><span class="from">From </span>$20</div></div>
         <div class="pc" data-cat="body" onclick="openPD('bo-mod')"><div class="pc-img"><img src="images/Modman_Body_Oil.png" alt="MOD" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">MOD</div><div class="pc-sub">Clean, deliberate, weightless</div><div class="pc-price"><span class="from">From </span>$20</div></div>
         <div class="pc" data-cat="body" onclick="openPD('bo-uto')"><div class="pc-img"><img src="images/Body_Oil_-_Uto.png" alt="UTÒ" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">UTÒ</div><div class="pc-sub">Warm resin body oil</div><div class="pc-price"><span class="from">From </span>$20</div></div>
-        <div class="pc" data-cat="body" onclick="openPD('sahel')"><div class="pc-img"><img src="images/Body_Creme_-_Sahel.webp" alt="SAHEL" loading="lazy"><div class="pc-badge">Restocking</div><div class="pc-qv">Quick View</div></div><div class="pc-name">SAHEL</div><div class="pc-sub">Softly sweet, warm, comforting — Utò scented body crème</div><div class="pc-price"><span class="from">From </span>$34</div></div>
+        <div class="pc" data-cat="body" onclick="openPD('sahel')"><div class="pc-img"><img src="images/Body_Creme_-_Sahel.webp?v=2" alt="SAHEL" loading="lazy"><div class="pc-badge">Restocking</div><div class="pc-qv">Quick View</div></div><div class="pc-name">SAHEL</div><div class="pc-sub">Softly sweet, warm, comforting — Utò scented body crème</div><div class="pc-price"><span class="from">From </span>$34</div></div>
       </div>
     </div>
 
@@ -2147,7 +2147,7 @@ textarea.contact-input { min-height: 120px; resize: vertical; }
       </div>
       <div class="p-row p-row-2">
         <div class="pc" data-cat="face" onclick="openPD('fo-resolve')"><div class="pc-img"><img src="images/Resolve_Face_Oil.png" alt="RESOLVE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">RESOLVE</div><div class="pc-sub">Blemish correcting — tea tree, CBD, squalane</div><div class="pc-price"><span class="from">From </span>$32</div></div>
-        <div class="pc" data-cat="face" onclick="openPD('fo-grace')"><div class="pc-img"><img src="images/Face_oil_-_grace.jpg" alt="GRACE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">GRACE</div><div class="pc-sub">Anti-aging — prickly pear, frankincense, marula</div><div class="pc-price"><span class="from">From </span>$32</div></div>
+        <div class="pc" data-cat="face" onclick="openPD('fo-grace')"><div class="pc-img"><img src="images/Face_oil_-_grace.jpg?v=2" alt="GRACE" loading="lazy"><div class="pc-qv">Quick View</div></div><div class="pc-name">GRACE</div><div class="pc-sub">Anti-aging — prickly pear, frankincense, marula</div><div class="pc-price"><span class="from">From </span>$32</div></div>
       </div>
     </div>
 
@@ -2572,7 +2572,7 @@ const P = [
    use:'Warm a few pumps between palms. Massage into damp skin after showering for best absorption.',
    ingredients:['Squalane','Jojoba Oil','Grapeseed Oil','Marula Oil','Sweet Almond Oil','Vitamin E','Citrus Essential Oil Blend','Fig Leaf Extract'],
    sizes:[{s:'2oz',p:20},{s:'4oz',p:36}],pairs:['sg-as','ss-as'],badge:null},
-  {id:'bo-ig',name:'IMPERIAL GARDEN',collection:'Good Body',cat:'body',sub:'Botanical body oil — dark orchid, plum, velvet moss',img:'images/Body_Oil_-_Imperial_Garden.png',
+  {id:'bo-ig',name:'IMPERIAL GARDEN',collection:'Good Body',cat:'body',sub:'Botanical body oil — dark orchid, plum, velvet moss',img:'images/Body_Oil_-_Imperial_Garden.png?v=2',
    why:'Imperial Garden is deep, lush, and unapologetically rich. Dark orchid and plum settle into velvety moss on the skin. For evenings when you want your body to feel like silk and smell like midnight.',
    who:'The one who likes things luxurious. If your taste runs dark and rich, this body oil matches your energy.',
    use:'Warm between palms. Apply to damp skin for maximum absorption. Layers beautifully with IFURU perfume.',
@@ -2591,7 +2591,7 @@ const P = [
    ingredients:['Squalane','Jojoba Oil','Marula Oil','Sweet Almond Oil','Babassu Oil','Grapeseed Oil','Vitamin E','Amber Resin','Sandalwood'],
    sizes:[{s:'2oz',p:20},{s:'4oz',p:36}],pairs:['p-uto','sahel'],badge:null},
   // BODY CRÈME (1)
-  {id:'sahel',name:'SAHEL',collection:'Good Body',cat:'body',sub:'Whole-Skin Treatment Crème — UTÒ scented',img:'images/Body_Creme_-_Sahel.webp',
+  {id:'sahel',name:'SAHEL',collection:'Good Body',cat:'body',sub:'Whole-Skin Treatment Crème — UTÒ scented',img:'images/Body_Creme_-_Sahel.webp?v=2',
    why:'Sahel is a whole-skin treatment crème inspired by the quiet resilience of the desert. Rich, non-greasy texture that melts into skin — from face to feet. Built on desert date oil and enriched with mushroom extract to support hydration and barrier balance. Designed as a serum and moisturizer in one. Scented with UTÒ: softly sweet, warm, and comforting.',
    who:'Everyone. Sahel is the product that converts people. Most brands formulate for the face and dilute for the body. Sahel was designed as whole-skin care from the beginning. One formula. Many rituals.',
    use:'For Face: Warm a pea-sized amount and press gently into skin as your final step. For Body: Massage into damp skin after bathing. For Targeted Areas: Apply to elbows, knees, heels, or anywhere needing reinforcement.',
@@ -2604,7 +2604,7 @@ const P = [
    use:'Warm 2-3 drops between palms and massage gently onto dewy cleansed face or after serum, 1-2 times a day.',
    ingredients:['Squalane','Prickly Pear Seed Oil','Marula Oil','Ximenia Oil','Borage Seed Oil','Licorice Root Extract','Green Tea Oil','Sacha Inchi Oil','Bladderwrack Extract','Daikon Seed Extract','Laurus Nobilis','Tea Tree Oil','Copaiba Oil','Lavender Oil','Frankincense','Lemon Oil','CBD','Tocopherol (Vitamin E)'],
    sizes:[{s:'10ml',p:32},{s:'50ml',p:100},{s:'100ml',p:180}],pairs:['fo-grace','sahel'],badge:null},
-  {id:'fo-grace',name:'GRACE',collection:'Good Face',cat:'face',sub:'Anti-Aging Face Oil',img:'images/Face_oil_-_grace.jpg',
+  {id:'fo-grace',name:'GRACE',collection:'Good Face',cat:'face',sub:'Anti-Aging Face Oil',img:'images/Face_oil_-_grace.jpg?v=2',
    why:'GRACE is formulated to reduce the appearance of fine lines and create a youthful look. Our powerful blend of natural oils nourishes and moisturizes skin, leaving it feeling soft and supple. Prickly pear seed oil, sea buckthorn, marula, orchid, and cacay — some of the rarest oils on earth working together.',
    who:'For mature skin, or anyone who wants prevention. If firmness, glow, and protection matter to you — GRACE delivers without any of the harshness of conventional anti-aging.',
    use:'Apply after cleansing; after (Plump) serum. To drive product in further and help reduce puffiness, apply with our proprietary Gua Sha tool.',
